# Kavach

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  gesture.py  main.py  pyproject.toml  requirements.txt  test_gemini.py  test_models.py  voice.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
autobotx/: main.py
iot_control/: __init__.py  gesture.py  spotify.py  voice.py
kavach/: requirements.txt
kavach/backend/: .env.example  main.py
kavach/frontend/: .keep  app.js  bluetooth.js  index.html  manifest.json  style.css  sw.js  voice.js
scripts/: camera_cleanup_stub.py  run_gesture.py  serial_command_test.py
src/: README.md  main.py  screenshot_engine.py  voice_assistant.py
static/: app.js  index.html  style.css
web_app/: main.py
web_app/api/: index.py
web_app/public/: app.js  index.html
